# lang

./: .clang-tidy  .clangd  .gitmodules  BINOP.md  README.md  a.txt  build.cpp  lib.cpp  meson.build  oper_tblgen  operators.td  test  test2
.circleci/: config.yml
include/lang/: attribute_ast.h  compiler.h  compiler_context.h  raii_guard.h  y_comb.h
include/lang/ast/: ast.h  attribute_ast.h  base_ast.h  binary_op_expr_ast.h  block_expr_ast.h  char_literal_expr_ast.h  empty_ast.h  function_call_expr_ast.h  function_decl_stmt_ast.h  functional_call_expr_ast.h  keyword_ast.h  lambda_expr_ast.h  lang_name_ref_expr_ast.h  literal_expr_ast.h  module_ast.h  name_ref_expr_ast.h  namespace_stmt_ast.h  namespaced_name_ref_expr_ast.h  operator_types.h  paren_expr_ast.h  struct_literal_expr.h  top_level_blk_ast.h  unary_op_expr_ast.h  using_expr_ast.h  variable_decl_expr_ast.h
include/lang/ast/control/: for_expr_ast.h  if_expr_ast.h  return_expr_ast.h  while_expr_ast.h  yield_expr_ast.h
include/lang/codegen/: codegen.h  codegen_ctx.h  codegen_target.h  codegen_value.h
include/lang/lexer/: code_location.h  lexer.h  token.h
include/lang/parser/: parser.h
include/lang/sema/: ct_value.h  sema.h  sema_ctx.h  simple_namespace.h  types.h
include/lang/utils/: function_like_utils.h  utils.h
misc/: SPEC.md  syntax.vim
src/: compiler.cpp  lexer.leg  main.cpp
src/lang/ast/: attribute_ast.cpp  base_ast.cpp  binary_op_expr_ast.cpp  block_expr_ast.cpp  char_literal_expr_ast.cpp  function_call_expr_ast.cpp  function_decl_stmt_ast.cpp  lambda_expr_ast.cpp  lang_name_ref_expr_ast.cpp  module_ast.cpp  name_ref_expr_ast.cpp  namespace_stmt_ast.cpp  namespaced_name_ref_expr_ast.cpp  struct_literal_expr_ast.cpp  top_level_blk_ast.cpp  unary_op_expr_ast.cpp  using_expr_ast.cpp  variable_decl_expr_ast.cpp
src/lang/ast/control/: if_expr_ast.cpp  return_expr_ast.cpp  while_expr_ast.cpp  yield_expr_ast.cpp
src/lang/codegen/: codegen_ctx.cpp  codegen_value.cpp
src/lang/lexer/: lex_impl.cpp  lexer.cpp
src/lang/parser/: parse_attribute_list.cpp  parse_binary_op_expr.cpp  parse_block_expr.cpp  parse_char_literal_expr.cpp  parse_expect_semi.cpp  parse_expr.cpp  parse_function_decl_stmt.cpp  parse_identifier_expr.cpp  parse_lambda_expr.cpp  parse_lang_identifier_expr.cpp  parse_namespace_stmt.cpp  parse_parse_paren_expr.cpp  parse_post_identifier.cpp  parse_primary_expr.cpp  parse_struct_literal_expr.cpp  parse_top_level_stmt.cpp  parse_type_expr.cpp  parse_unary_expr.cpp  parse_using_expr.cpp  parse_variable_def_expr.cpp  parser.cpp  parser_util.h
src/lang/parser/control/: parse_if_expr.cpp  parse_return_expr.cpp  parse_while_expr.cpp  parse_yield_expr.cpp
src/lang/sema/: sema_ctx.cpp  simple_namespace.cpp  types.cpp
src/lang/utils/: function_like_utils.cpp
src/test/: jit.h  test.cpp
stdlib/: lib.cpp  types
testcase/: 1  2  3  4  5  6  7  factorial  hex_literals  if_expr  test2  test3  type_test  while_1
testcase/cases/codegen/: test_bit_twiddle  test_crc  test_gray  test_leetcode  test_mult  test_popcount  test_simple_control_flow
testcase/cases/parser/: test_complex_expr  test_complex_expr_1  test_complex_expression  test_hex_literals  test_if  test_if_expr  test_nested_if  test_while
tools/: lexer_generator.cpp  operator_tablegen.cpp
